fixed backspacing
lets the user backspace/delete numbers from cells again

--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@ input {
 	box-sizing: border-box;
 	width: fit-content;
 	padding: 30px;
+	padding-bottom: 20px;
 	border: 1px solid black;
 	border-radius: 12px;
 	background-color: #8569C2;
@@ -46,4 +47,10 @@ table{
 }
 body{
 	background-color: #503F75;
+}
+button{
+	background-color: #DCD0F7;
+	padding: 11px;
+	border-radius: 8px;
+	margin: 5px;
 }
